# ycchat

./: .gitmodules  Cargo.toml  README.md  build.rs  grpcurl.md  schema.surreal
schema/: schema.surql
src/: client.rs  main.rs  server.rs
src/auth/: jwt.rs
src/chat/: broadcaster.rs  chat.rs  chat_message_pager.rs  chat_room_pager.rs  chat_room_user_pager.rs  mod.rs  paging.rs
src/chat/interceptor/: auth.rs
src/chat_old/: chat.rs
src/db/: mod.rs
src/db/postgres/: mod.rs  user.rs
src/db/surreal/: auth.rs  channel.rs  message.rs  message_acknowledge.rs  mod.rs  server.rs  server_category.rs  server_member.rs  user.rs
src/db/traits/: attachment.rs  auth.rs  channel.rs  message.rs  message_acknowledge.rs  mod.rs  server.rs  server_category.rs  server_member.rs  user.rs
src/interceptor/: auth.rs  mod.rs  transaction.rs
src/models/: attachment.rs  auth.rs  channel.rs  message.rs  message_acknowledge.rs  mod.rs  server.rs  server_category.rs  server_member.rs  user.rs
src/redis/: chat_latest_message.rs  chat_member_rooms.rs  chat_message.rs  chat_message_readed.rs  chat_pubsub.rs  chat_room_latest_message.rs  chat_room_members.rs  chat_room_message.rs  chat_unread_message_count.rs  mod.rs  page_token.rs  refresh_token.rs
src/services/: account.rs  auth.rs  channel.rs  connect.rs  me_server.rs  me_user.rs  message.rs  mod.rs  server.rs  server_category.rs  server_member.rs  user.rs
src/util/: base64_encoder.rs  mod.rs  pager.rs  variable.rs
