[package]
name = "ycChat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenv = "0.15.0"
http = "0.2.8"
hyper = "0.14.24"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
# postgres = "0.19.4"
prost = "0.11.8"
prost-types = "0.11.8"
redis = "0.22.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
surrealdb = "1.0.0-beta.9"
syn = "1.0.107"
tokio = { version = "1.21.2", features= ["full"] }
tokio-stream = "0.1.11"
tonic = "0.8.3"
tonic-web = "0.5.0"
ulid = { version = "1.0.0", features = ["serde"]}
uuid = { version = "1.3.1" }

[build-dependencies]
tonic-build = "0.8.2"
