[package]
name = "ycChat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
base64 = "0.21.4"
bytes = "1.5.0"
chrono = "0.4.31"
dotenv = "0.15.0"
futures = "0.3.28"
http = "0.2.9"
hyper = "0.14.27"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
# postgres = "0.19.4"
prost = "0.12.1"
prost-types = "0.12.1"
# redis = "0.22.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
surrealdb = "1.0.0"
syn = "2.0.37"
tokio = { version = "1.32.0", features= ["full"] }
tokio-stream = "0.1.14"
tonic = "0.10.1"
tonic-web = "0.10.1"
tower = "0.4.13"
ulid = { version = "1.1.0", features = ["serde"] }
uuid = { version = "1.4.1" }

[build-dependencies]
tonic-build = "0.10.1"
