[package]
name = "ycChat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
base64 = "0.21.5"
bytes = "1.5.0"
chrono = "0.4.31"
dotenv = "0.15.0"
futures = "0.3.29"
http = "1.0.0"
hyper = "1.0.1"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
# postgres = "0.19.4"
prost = "0.12.3"
prost-types = "0.12.3"
# redis = "0.22.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
surrealdb = "1.0.1"
syn = "2.0.41"
tokio = { version = "1.35.0", features= ["full"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"
tonic-web = "0.10.2"
tower = "0.4.13"
ulid = { version = "1.1.0", features = ["serde"] }
uuid = { version = "1.6.1" }

[build-dependencies]
tonic-build = "0.10.2"
